# particle-simulation

./: .gitignore  CMakeLists.txt  README.md
demo/: collision.cpp  falling.cpp  solar_system.cpp  test.cpp
doc/: Doxyfile
examples/: test.cpp
src/: README.md  lab1.cxx  main.cpp
src/maths/: vector.hpp
src/quark/: quark.hpp
src/quark/maths/: const_div.hpp  const_pow.hpp
src/quark/visualizer/: view_port.hpp  visualizer.hpp  xml_visualizer.hpp
src/quark/visualizer/sdl/: sdl_visualizer.hpp
src/quark/world/: particle.hpp  universe.hpp  universe_chunk.hpp
src/quark/world/forces/: forces.hpp  gravity.hpp
src/quark/world/interactions/: gravity.hpp  no_interactions.hpp
src/visualizer/: view_port.hpp  visulizer.hpp
src/visualizer/opengl/: visulizer.hpp
src/visualizer/sdl/: sdl_visulizer.hpp
src/world/: particle.hpp  universe.hpp  universe_chunk.hpp
src/world/interactions/: electrostatic.hpp  gravity.hpp  interactor.hpp  lennard_jones.hpp  no_interactions.hpp
test/: vector.cpp
